Expand vcl variable
Change-Id: I963e21dfb80a2f2f67730cc3e86a9e19e9f3d358

--- a/templates/varnish/text-backend.inc.vcl.erb
+++ b/templates/varnish/text-backend.inc.vcl.erb
@@ -40,7 +40,7 @@ sub vcl_recv {
 <% if vcl_config.fetch("cluster_tier", "1") != "1" -%>
 
 	if (req.url == "/wiki/Special:CentralAutoLogin/start?type=script") {
-		set req.backend =  @vcl_config.fetch("default_backend", "backend")_random;
+		set req.backend = <%= @vcl_config.fetch("default_backend", "backend") %>_random;
 	}
 <% end -%>
 
