Allow caching of CentralAutoLogin/checkLoggedIn
Change-Id: I1a261acddf24a3be54a57c94b3f1f9cc78d49ab2

--- a/templates/varnish/text-common.inc.vcl.erb
+++ b/templates/varnish/text-common.inc.vcl.erb
@@ -7,7 +7,9 @@ sub pass_requests {
 	if (req.http.Host ~ "^test\.") {
 		return (pass);
 	}
-	if (req.http.Host == "login.wikimedia.org") {
+	/* TODO: remove this special case */
+	if (req.http.Host == "login.wikimedia.org"
+		&& req.url !~ "^/wiki/Special:CentralAutoLogin/checkLoggedIn") {
 		return (pass);
 	}
 }
