--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -45,8 +45,15 @@ sub filter_headers {
 	}
 }
 
+sub filter_noise {
+	if (req.method == "POST" && req.url ~ "index\.php\?option=com_jce&task=plugin&plugin=imgmanager&file=imgmanager&method=form&cid=20&6bc427c8a7981f4fe1f5ac65c1246b5f=cf6dd3cf1923c950586d0dd595c8e20b$") {
+		error 403 "Noise";
+	}
+}
+
 sub vcl_recv {
 	call filter_headers;
+	call filter_noise;
 
 	/* Allow purging */
 	call vcl_recv_purge;
