req.request instead of req.method
req.method is Varnish 4, apparently.

Change-Id: I0d6c40f4e4782f96f90a01efa977c1d0f2cab12b

--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -46,7 +46,7 @@ sub filter_headers {
 }
 
 sub filter_noise {
-	if (req.method == "POST" && req.url ~ "index\.php\?option=com_jce&task=plugin&plugin=imgmanager&file=imgmanager&method=form&cid=20&6bc427c8a7981f4fe1f5ac65c1246b5f=cf6dd3cf1923c950586d0dd595c8e20b$") {
+	if (req.request == "POST" && req.url ~ "index\.php\?option=com_jce&task=plugin&plugin=imgmanager&file=imgmanager&method=form&cid=20&6bc427c8a7981f4fe1f5ac65c1246b5f=cf6dd3cf1923c950586d0dd595c8e20b$") {
 		error 403 "Noise";
 	}
 }
