Ignore Range requests
We're seeing elevated 503s due to Varnish range request handling
in combination with gzip/gunzip support. Because Varnish receives
most objects from the backend(s) compressed, it needs to gunzip
and gzip to serve a response, which appears to be failing often
in various ways.

Until we have time to debug this properly, let's disable Range
requests for the Text cluster, as they're not tremendously
helpful anyway.

Change-Id: I2524a8d9ca1006da26bae174d6067e6e71d50c37

--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -58,6 +58,11 @@ sub vcl_recv {
 	/* Allow purging */
 	call vcl_recv_purge;
 
+	/* FIXME: we're seeing an issue with Range requests and gzip/gunzip.
+	 * Disable Range requests for now.
+	 */
+	unset req.http.Range;
+
 	call rewrite_proxy_urls;
 	call mobile_redirect;
 	call pass_requests;
