Distribute all CentralAutoLogin requests randomly over backends
Some CentralAutoLogin request are all ending up on specific
backends, maxing them out on threads.

Change-Id: I023d9bc196794872b4ade49116065a553e4d69e9

--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -67,7 +67,7 @@ sub vcl_recv {
 	call mobile_redirect;
 	call pass_requests;
 
-	if (req.url == "/wiki/Special:CentralAutoLogin/start?type=script") {
+	if (req.url ~ "^/wiki/Special:CentralAutoLogin/") {
 		set req.backend = backend_random;
 	}
 
