--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -23,7 +23,7 @@ director <%= default_backend %>_random random {
 sub mobile_redirect {
 	if ((req.http.User-Agent ~ "(?i)(mobi|240x240|240x320|320x320|alcatel|android|audiovox|bada|benq|blackberry|cdm-|compal-|docomo|ericsson|hiptop|htc[-_]|huawei|ipod|kddi-|kindle|meego|midp|mitsu|mmp\/|mot-|motor|ngm_|nintendo|opera.m|palm|panasonic|philips|phone|playstation|portalmmm|sagem-|samsung|sanyo|sec-|sendo|sharp|softbank|symbian|teleca|up.browser|webos)"
 		|| req.http.User-Agent ~ "^(lge?|sie|nec|sgh|pg)-" || req.http.Accept ~ "vnd.wap.wml")
-		&& req.http.User-Agent !~ "(iPad|Android.3|(?i)tablet|(?i)(?!google)bot|PlayBook|Wii)"
+		&& req.http.User-Agent !~ "(iPad|Android.3|(?i)tablet|PlayBook|Wii)"
 		&& req.http.Cookie !~ "(stopMobileRedirect=true|mf_useformat=desktop)"
 		&& req.url ~ "^/wiki/") {
 		set req.http.MobileHost = regsub(req.http.Host, "^(?:www\.(?=mediawiki))?((?:commons|species|meta|incubator|outreach|strategy|wikimania201[234])\.(?=wikimedia)|\w+\.(?!wikimedia|mediawiki)|(?=mediawiki|wikimediafoundation))(wikimedia|wikipedia|wiktionary|wikinews|wikisource|wikiquote|wikibooks|wikiversity|wikivoyage|mediawiki|wikimediafoundation)\.", "\1m.\2.");
