qualify vars planet_domain_name, planet_languages
Change-Id: I20bfbf49faa8a5065cb8b7453606cf9c47ee4ab1

--- a/templates/planet/en_config.erb
+++ b/templates/planet/en_config.erb
@@ -11,7 +11,7 @@
 [Planet]
 
 name            = en.planet.wikimedia
-link            = http://en.planet.<%= planet_domain_name %>/
+link            = http://en.planet.<%= scope.lookupvar('misc::planet-venus::planet_domain_name') %>/
 owner_name      = planet
 owner_email     = planet@wikimedia.org
 output_theme    = /usr/share/planet-venus/theme/wikimedia/en
