--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -468,7 +468,7 @@ define command{
 
 define command{
 	command_name	puppet-FAIL
-	command_line	echo "No successful Puppet run in the last 3 hours" && exit 2
+	command_line	echo "No successful Puppet run for $SERVICEDURATION$" && exit 2
 }
 
 define command{
