Change the way cron run times are calculated
Make the puppet run interval more configurable by allowing to modify it
by changing a single value instead of a value + a cron entry. The ERB
calculates the cron entry now using the interval and crontimes values.
An assumption is made that the maximum interval is 60 minutes and the
minimum 1 minute.

Change-Id: Ie44b37f45a2962954927e988947315e8d9459400

--- a/modules/base/templates/puppet.cron.erb
+++ b/modules/base/templates/puppet.cron.erb
@@ -2,6 +2,14 @@
 ##### THIS FILE IS MANAGED BY PUPPET
 #####  as template('base/puppet.cron.erb')
 ######################################################################
-<% $crontime = scope.lookupvar('base::puppet::crontime') -%>
-<%= $crontime %>,<%= $crontime.to_i + 30 %>	*	*	*	*	root	timeout <% if scope.function_versioncmp([lsbdistrelease, "12.04"]) >= 0 %> -k 300<% end %> 1800 puppet agent --onetime --verbose --no-daemonize --no-splay --show_diff >> /var/log/puppet.log 2>&1
+<%-
+interval = scope.lookupvar('base::puppet::interval')
+crontime = scope.lookupvar('base::puppet::crontime')
+numtimes = 60 / interval
+tmp = Array.new(numtimes) { |t| t = t * interval + crontime }
+tmp = tmp.map { |x| if x < 60 then x  else x - 60 end }
+tmp = tmp.sort()
+times = tmp.join(',')
+-%>
+<%= times %>	*	*	*	*	root	timeout <% if scope.function_versioncmp([lsbdistrelease, "12.04"]) >= 0 %> -k 300<% end %> 1800 puppet agent --onetime --verbose --no-daemonize --no-splay --show_diff >> /var/log/puppet.log 2>&1
 @reboot	root	timeout <% if scope.function_versioncmp([lsbdistrelease, "12.04"]) >= 0 %> -k 300<% end %> 1800 puppet agent --onetime --verbose --no-daemonize --no-splay --show_diff >> /var/log/puppet.log 2>&1
