--- a/modules/salt/templates/minion.erb
+++ b/modules/salt/templates/minion.erb
@@ -8,7 +8,13 @@
 
 # Set the location of the salt master server, if the master server cannot be
 # resolved, then the minion will fail to start.
+<% if salt_master.is_a? Array %>
+<% salt_master.each do |name| %>
+master: <% name  %>
+<% end %>
+<% else %>
 master: <%= salt_master %>
+<% end %>
 
 # Set the number of seconds to wait before attempting to resolve
 # the master hostname if name resolution fails. Defaults to 30 seconds.
