--- a/modules/salt/templates/minion.erb
+++ b/modules/salt/templates/minion.erb
@@ -9,8 +9,9 @@
 # Set the location of the salt master server, if the master server cannot be
 # resolved, then the minion will fail to start.
 <% if salt_master.is_a? Array %>
+master:
 <% salt_master.each do |name| %>
-master: <%= name  %>
+  - <%= name  %>
 <% end %>
 <% else %>
 master: <%= salt_master %>
