Cleanup puppetmaster's apache Listen ports
No need for any puppetmaster to Listen on ports 80,443 and no need for
backends to Listen on 8140, since no client is going to connect directly
to them. Since this will cause alerts update monitoring as well. Also
move the monitoring check from passenger class to init class (which is
pretty close to becoming a role)

Change-Id: I072be0f10dad4c48648aec26aa0f047cfed9e194

--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -80,11 +80,15 @@ define command{
         command_line    $USER1$/check_http -H $HOSTADDRESS$ -p $ARG1$
         }
 
-# 'check_http' on a puppetmaster (SSL,port 8140,expect 400)
-# XXX(ori-l, 11-Oct-2013): set timeout to 60 (-t 60) to prevent flapping.
+# 'check_http' on a puppetmaster (SSL,ports 8140,8141 and should expect 400)
 define command{
-	command_name	check_http_puppetmaster
-	command_line	$USER1$/check_http --ssl -p 8140 -e 400 -t 60 -H $HOSTADDRESS$
+	command_name	check_http_puppetmaster_frontend
+	command_line	$USER1$/check_http --ssl -p 8140 -e 400 -H $HOSTADDRESS$
+	}
+
+define command{
+	command_name	check_http_puppetmaster_backend
+	command_line	$USER1$/check_http --ssl -p 8141 -e 400 -H $HOSTADDRESS$
 	}
 
 # Example usage:  check_solr!500:1000|5
