--- a/modules/elasticsearch/templates/logging.yml.erb
+++ b/modules/elasticsearch/templates/logging.yml.erb
@@ -2,6 +2,16 @@ rootLogger: INFO, console, file
 logger:
   # log action execution errors for easier debugging
   action: DEBUG
+
+  # This is noisy and already filed upstream:
+  # https://github.com/elasticsearch/elasticsearch/issues/4203
+  action.admin.cluster.node.stats: INFO
+
+  # We'd like to know more about shard allocation and management because we've
+  # had an outage due to unknown allocation problems.  This will cause more
+  # logging but it should be worth it.
+  cluster: TRACE
+
   # reduce the logging for aws, too much is logged under the default INFO
   com.amazonaws: WARN
   common.jna: DEBUG
