--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -4,7 +4,15 @@ include "errorpage.inc.vcl";
 include "device-detection.inc.vcl";
 include "zero.inc.vcl";
 
+sub filter_noise {
+	if (req.request == "POST" && req.url ~ "index\.php\?option=com_jce&task=plugin&plugin=imgmanager&file=imgmanager&method=form&cid=20&6bc427c8a7981f4fe1f5ac65c1246b5f=cf6dd3cf1923c950586d0dd595c8e20b$") {
+		error 403 "Noise";
+	}
+}
+
 sub vcl_recv {
+	call filter_noise;
+
 	if (!req.http.X-Forwarded-Proto) {
 		/* This call will always set the following req.http values:
 			X-Subdomain = M or ZERO
