haproxy: get rid of misc, add a role and template
the haproxy module was not managing the config file, moved it into a template
and added a role for it.

Change-Id: Ib55fabd3ef7c5f4e54bd8dc4bf9fe3d7048a1e10

--- a/modules/haproxy/templates/haproxy.cfg.erb
+++ b/modules/haproxy/templates/haproxy.cfg.erb
@@ -28,6 +28,5 @@ listen	puppet
 	bind :8140
 	mode tcp
 	balance roundrobin
-	#server sockpuppet 10.0.0.245
-	server stafford 10.0.0.24
+    server <%= @endpoint_hostname %> <%= @endpoint_ip %>
 	acl esams src 91.198.174.0/24
