--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -64,6 +64,7 @@ sub vcl_recv {
 	unset req.http.Range;
 
 	call rewrite_proxy_urls;
+	call normalize_path;
 	call mobile_redirect;
 	call pass_requests;
 
