--- a/modules/base/templates/puppet.cron.erb
+++ b/modules/base/templates/puppet.cron.erb
@@ -3,8 +3,8 @@
 #####  as template('base/puppet.cron.erb')
 ######################################################################
 <%-
-interval = scope.lookupvar('base::puppet::interval')
-crontime = scope.lookupvar('base::puppet::crontime')
+interval = scope.lookupvar('base::puppet::interval').to_i
+crontime = scope.lookupvar('base::puppet::crontime').to_i
 numtimes = 60 / interval
 tmp = Array.new(numtimes) { |t| t = t * interval + crontime }
 tmp = tmp.map { |x| if x < 60 then x  else x - 60 end }
