Add check_graphite & a reqstats 5xx check
There are a bazillion check_graphite checks out there, but this one from
Disqus seems to be the most reasonable, well-written, using Graphite's
JSON output, with a proper license file and in a nice enough language
most of us are familiar with (Python). Import it in our repository from
https://github.com/disqus/nagios-plugins/ along with its accompanying
LICENSE file. The checks comes with very interesting parameters already,
such as from/until, under/over and percentile/holt winters confidence
bands.

Use it to provision an Icinga check for reqstats_5xx, since we've had
occurences of such spikes lately that were caught by humans (and it's
also a good idea to raise alerts when we're 503ing, duh!).

The monitor_service and associated configs suck at the moment and are
way too manual, so this means writing a new very inflexible command for
every Graphite check we want to do. Such is life, we can DRY later.

Use a time window of past 2 hours to keep the check from flapping too
often, warn at 250 req/min and raise a critical alert  at 500 req/min.
These seem okay as initial values, we can tune it as we go. If it works
out nicely, we could even make it a paging check in the future.

Change-Id: I433dc48dc18ba07a25dc2348526103d621e0f2d8

--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -600,6 +600,10 @@ define command{
 	command_line	$USER1$/check_elasticsearch -H $HOSTADDRESS$
 }
 
+define command{
+	command_name	check_reqstats_5xx
+	command_line	$USER1$/check_graphite -U $ARG1$ --from $ARG2$  -t reqstats.5xx -W $ARG3$ -C $ARG4$
+}
 
 
 # Checks whether a host belongs to given dsh group(s)
