--- a/templates/varnish/errorpage.inc.vcl.erb
+++ b/templates/varnish/errorpage.inc.vcl.erb
@@ -84,6 +84,7 @@ padding-top:0.8em;
 
 <div id="en" lang="en">
 <p>Our servers are currently experiencing a technical problem. This is probably temporary and should be fixed soon. Please <a href=""} + "/" + req.url + {"" onclick="window.location.reload(false); return false">try again</a> in a few minutes.</p>
+<p>You may be able to get further information in Wikimedia's <a href="https://twitter.com/wikimedia">Twitter feed</a>.</p>
 <hr noshade="noshade" size="1px" width="80%" />
 <div class="TechnicalStuff">
 If you report this error to the Wikimedia System Administrators, please include the details below.<br/>
