WIP Bug 56282: Gzip all Parsoid HTML before storing it in Varnish
We can also implement this in Parsoid itself, but would need to make sure that
we don't vary on Accept-Encoding. Since Varnish supports this too and has
plenty of cycles to spare this seems to be the simpler solution.

For clients connecting to Varnish that don't support gzip compression, Varnish
will transparently decompress the stored HTML.

Change-Id: Ie447c52f888d405f5dc1254fcf920297c0020b74

--- a/templates/varnish/parsoid-backend.inc.vcl.erb
+++ b/templates/varnish/parsoid-backend.inc.vcl.erb
@@ -8,3 +8,8 @@ sub vcl_miss {
 		error 412 "Entity not in cache";
 	}
 }
+
+sub vcl_fetch {
+	# make sure to gzip all Parsoid HTML
+	set beresp.do_gzip = true;
+}
