tungsten: serve gdash on gdash.wm.o vhost
* Add missing trailing semicolon to nginx config.
* Move deployment::target resource to module from role class.
* Make install_dir default to git-deploy default.

Change-Id: Ic6722abb46853d3bd7d2ac5fee1e93eb062cfd0f

--- a/modules/gdash/templates/gdash.nginx.erb
+++ b/modules/gdash/templates/gdash.nginx.erb
@@ -2,7 +2,7 @@
 # This file is managed by Puppet
 
 upstream gdash {
-    server unix:/var/run/gdash/gdash.sock
+    server unix:/var/run/gdash/gdash.sock;
 }
 
 server {
