Add missing trailing semicolon to Gdash Nginx config
Change-Id: If8b986dab01874ec77959c6bcff63db39d4aea41

--- a/modules/gdash/templates/gdash.nginx.erb
+++ b/modules/gdash/templates/gdash.nginx.erb
@@ -7,7 +7,7 @@ upstream gdash {
 
 server {
     listen 80;
-    server_name <%= @server_name %>
+    server_name <%= @server_name %>;
 
     ## Static files ##
 
@@ -27,6 +27,6 @@ server {
         include uwsgi_params;
         uwsgi_pass gdash;
         root /srv/deployment/gdash/gdash/public;
-        uwsgi_modifier1 7;  # http://tinyurl.com/rack-uwsgi-modifier
+        uwsgi_modifier1 7;  # see <http://tinyurl.com/rack-uwsgi-modifier>
     }
 }
