--- a/modules/graphite/templates/graphite.nginx.erb
+++ b/modules/graphite/templates/graphite.nginx.erb
@@ -7,7 +7,7 @@ upstream graphite_web {
 
 server {
     listen 80;
-    server_name <%= @server_name %>
+    server_name <%= @server_name %>;
 
     ## Static files ##
 
