Serve gdash.wikimedia.org on misc varnish
Add tungsten.eqiad.wmnet as a misc varnish backend and route
gdash.wikimedia.org requests to it.

This isn't blocked on completion of the Graphite migration from professor,
since Gdash doesn't actually interact with Graphite, but only constructs graph
URLs.

Needs DNS update.

Change-Id: I088a655a1eba586a482cb5aa1baee87bbb46713d

--- a/templates/varnish/misc.inc.vcl.erb
+++ b/templates/varnish/misc.inc.vcl.erb
@@ -10,6 +10,9 @@ sub vcl_recv {
 	} elsif (req.http.Host == "gerrit.wikimedia.org") {
 		set req.backend = ytterbium;
 		return (lookup);
+	} elsif (req.http.Host == "gdash.wikimedia.org") {
+		set req.backend = tungsten;
+		return (lookup);
 	}
 }
 
