serve graphite.wikimedia.org via misc-varnish
Ineffectual without the corresponding DNS update, but can be safely pushed out.
Note that templates/varnish/graphite.inc.vcl.erb set custom beresp.ttls, but I
prefer to manage that in Nginx and Graphite themselves.

Change-Id: Ib750a9c0253eff0f21fea95e919a32d63c1d0753

--- a/templates/varnish/misc.inc.vcl.erb
+++ b/templates/varnish/misc.inc.vcl.erb
@@ -10,7 +10,7 @@ sub vcl_recv {
 	} elsif (req.http.Host == "gerrit.wikimedia.org") {
 		set req.backend = ytterbium;
 		return (lookup);
-	} elsif (req.http.Host == "gdash.wikimedia.org") {
+	} elsif (req.http.Host == "gdash.wikimedia.org" || req.http.Host == "graphite.wikimedia.org") {
 		set req.backend = tungsten;
 		return (lookup);
 	}
