Set SO_RCVBUF on gmond listeners to a sensible value
Massive packet loss on various Varnish cluster aggregators is causing
corruption of the positive slope metrics, making them look spiky. I have
confirmed that increasing the receive buffer size fixes it.

Change-Id: Idfed68176d5bdec37296c734fc299cec8873024e

--- a/templates/ganglia/gmond_template.erb
+++ b/templates/ganglia/gmond_template.erb
@@ -63,6 +63,9 @@ udp_recv_channel {
   mcast_join = <%= mcast_address %>
   port = 8649
   bind = <%= mcast_address %>
+  /* Increase the buffer size. With the default setting (224KB), Tim observed
+     ~30% packet loss on a cluster with 12 hosts and ~300 metrics per host. */
+  buffer = 4194304
 }
 
 /* You can specify as many tcp_accept_channels as you like to share
