--- a/modules/ganglia_new/templates/gmond.conf.erb
+++ b/modules/ganglia_new/templates/gmond.conf.erb
@@ -57,6 +57,9 @@ ip, mask = prefix.split('/')
     }
 <% end -%>
   }
+  /* Increase the buffer size. With the default setting (224KB), Tim observed
+     ~30% packet loss on a cluster with 12 hosts and ~300 metrics per host. */
+  buffer = 4194304
 }
 
 /* You can specify as many tcp_accept_channels as you like to share
