--- a/templates/varnish/text-backend.inc.vcl.erb
+++ b/templates/varnish/text-backend.inc.vcl.erb
@@ -40,7 +40,8 @@ sub vcl_recv {
 	call pass_requests;
 <% if vcl_config.fetch("cluster_tier", "1") != "1" -%>
 
-	if (req.url ~ "^/wiki/Special:CentralAutoLogin/") {
+	if (req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
+	    req.url ~ "^/w/index.php?title=Spezial:Zentrale_automatische_Anmeldung/") {
 		set req.backend = <%= @vcl_config.fetch("default_backend", "backend") %>_random;
 	}
 <% end -%>
