--- a/templates/varnish/text-backend.inc.vcl.erb
+++ b/templates/varnish/text-backend.inc.vcl.erb
@@ -38,13 +38,14 @@ sub vcl_recv {
 
 <% end -%>
 	call pass_requests;
-<% if vcl_config.fetch("cluster_tier", "1") != "1" -%>
 
 	if (req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
 	    req.url ~ "^/w/index.php?title=Spezial:Zentrale_automatische_Anmeldung/") {
+<% if vcl_config.fetch("cluster_tier", "1") != "1" -%>
 		set req.backend = <%= @vcl_config.fetch("default_backend", "backend") %>_random;
-	}
 <% end -%>
+		set req.hash_ignore_busy = true;
+	}
 
 	call evaluate_cookie;
 
