--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -71,6 +71,8 @@ sub vcl_recv {
 	if (req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
 	    req.url ~ "^/w/index.php?title=Spezial:Zentrale_automatische_Anmeldung/") {
 		set req.backend = backend_random;
+		set req.hash_ignore_busy = true;
+
 	}
 
 	/* Users that just logged out, should not get a 304 for their
