--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -466,7 +466,7 @@ define command{
 
 define command{
 	command_name	puppet-FAIL
-	command_line	echo "No successful Puppet run for $SERVICEDURATION$" && exit 2
+	command_line	date --date @$LASTSERVICEOK$ +"Last successful Puppet run was %c" && exit 2
 }
 
 define command{
