Centralize puppet reports and file buckets
With the move to a multi-puppetmaster environment, reports and
filebuckets would be spread out on all puppetmasters. Report storage and
filebuckets take minimal resources and as such they could be centralized
for more efficient processing with no danger for the infrastructure.
This commit centralizes them on the frontend puppetmaster

Change-Id: If451bda2f401cd25e386d3959129103fbdc2c905

--- a/modules/puppetmaster/templates/puppetmaster.erb
+++ b/modules/puppetmaster/templates/puppetmaster.erb
@@ -36,6 +36,8 @@ RailsAutoDetect Off
 
 	SSLProxyEngine on
 	ProxyPassMatch ^/([^/]+/certificate.*)$ https://<%= @fqdn %>:8141
+	ProxyPassMatch ^/([^/]+/report/.*)$ https://<%= @fqdn %>:8141
+	ProxyPassMatch ^/([^/]+/file_bucket_file/md5/.*)$ https://<%= @fqdn %>:8141
 	ProxyPass / balancer://mycluster/
 	<Proxy balancer://mycluster>
 	  <%- @workers.each do |worker| -%>
