Add configuration for Wikimania Scholarships
Add configuration for the Wikimania Scholarships application. This is
a stand-alone php application hosted in an Apache vhost with code
deployed via Trebuchet. Data will be stored in the misc MySQL shard. SSL
termination and caching will be provided by the misc Varnish cluster.
Logs will be forwarded to fluorine via the udp2log protocol.

Needs DNS update.

Bug: 57870

Change-Id: Ie568f268b1df21bd3bd6681436f6bac444f82132

--- a/templates/varnish/misc.inc.vcl.erb
+++ b/templates/varnish/misc.inc.vcl.erb
@@ -13,6 +13,9 @@ sub vcl_recv {
 	} elsif (req.http.Host == "gdash.wikimedia.org" || req.http.Host == "graphite.wikimedia.org") {
 		set req.backend = tungsten;
 		return (lookup);
+	} elsif (req.http.Host == "scholarships.wikimedia.org") {
+		set req.backend = zirconium;
+		return (lookup);
 	}
 }
 
