protoproxy: set proxy_read_timeout to 180s
As a follow up to Ic14902d399712a1eb0d2d98ce5f505e6740ef68b, also set
protoproxy's proxy_read_timeout to be in sync with Varnish's
first_byte_timeout and PHP's max_execution_time.

Change-Id: I605ab157a3723da5663bb8fa978f16a42d67d4f1

--- a/modules/protoproxy/templates/localssl.erb
+++ b/modules/protoproxy/templates/localssl.erb
@@ -18,6 +18,10 @@ server {
 	location / {
 		proxy_pass http://<%= scope.lookupvar('::ipaddress') %>:<%= @upstream_port %>;
 
+		# this should be in sync with Varnish's first_byte_timeout
+		# and PHP's max_execution_time
+		proxy_read_timeout 180s;
+
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
