--- a/modules/protoproxy/templates/proxy.erb
+++ b/modules/protoproxy/templates/proxy.erb
@@ -64,6 +64,10 @@ proxy_intercept_errors on;
 		error_page 502 503 504 = @fallback;
 		<% end -%>
 
+		# this should be in sync with Varnish's first_byte_timeout
+		# and PHP's max_execution_time
+		proxy_read_timeout 180s;
+
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
