protoproxy: add proxy_read_timeout to IPv6 too
I605ab157a3723da5663bb8fa978f16a42d67d4f1 changed the timeout, but only
for the SSL part. Fix the IPv6 part of the config as well, short-lived
as it may be.

Change-Id: I13c95d1881c64690fb1d1bd009e9410049eb5962

--- a/modules/protoproxy/templates/proxy.erb
+++ b/modules/protoproxy/templates/proxy.erb
@@ -113,6 +113,10 @@ server {
 		proxy_pass http://<%= name %>;
 		proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
 
+		# this should be in sync with Varnish's first_byte_timeout
+		# and PHP's max_execution_time
+		proxy_read_timeout 180s;
+
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
