Add Maria Pacana to the English Planet Wikimedia
Requested at https://meta.wikimedia.org/w/index.php?oldid=6610312

Change-Id: I0abbf7ef766357939147c6740f96cf898ffebd5d

--- a/templates/planet/en_config.erb
+++ b/templates/planet/en_config.erb
@@ -554,3 +554,6 @@ name=Pragun Bhutani
 
 [https://wikistaycation.wordpress.com/feed/]
 name=Wikistaycation
+
+[http://mariapacana.tumblr.com/tagged/parsoid/rss]
+name=Maria Pacana
