Revert "varnish: remove .{wap,mobile}. rewrites/redirects"
*.mobile.wikipedia.org gets hits from Googlebot and Bingbot.
301s wouldn't hurt them but let's revert that for now until
we understand why is that the case.

This reverts commit 745a20764b6f130a6ffec676e1d7f9756ce87551.

Change-Id: I74bab7704b02e0c1a5c5f1f12ad1d250e6f8d92e

--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -40,8 +40,18 @@ sub vcl_recv {
 	} else if (req.http.host == "m.wikimediafoundation.org") {
 		set req.http.host = "wikimediafoundation.org";
 	} else {
+
 		/* Replace <language>.(m|zero).<project>.org by <language>.<project>.org */
 		set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.(m|zero)\.", "\1.");
+
+		/* Rewrite <language>.wap.wikipedia.org to new mobile site */
+		set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.wap\.", "\1.mobile.");
+
+		/* Support the old mobile.wikipedia.org wap gateway */
+		if (req.http.host ~ "^([a-zA-Z0-9-]+)\.mobile\.([a-zA-Z0-9-]+)\.org$") {
+			set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.mobile\.", "\1.");
+			set req.url = regsub(req.url, "\S+[\?&]go=([^&]+).*", "/wiki/\1");
+		}
 	}
 
 	/* Allow purging */
@@ -60,6 +70,10 @@ sub vcl_recv {
 		 */
 	} else {
 		unset req.http.Cookie;
+	}
+
+	if (req.http.host == "mobile.wikipedia.org") {
+		error 666 "http://en.mobile.wikipedia.org" + req.url;
 	}
 
 	call device_detection;
