nrpe: let us specify timeout of check_nrpe
nrpe::monitor_service() define now let us pass a timeout parameter which
ends up being passed to the check_nrep utility as -t.  That raise the
default 10 seconds timeout which is useful for test we know to take a
bit longer than that.

The icinga command nrpe_check now require a second argument (the
timeout). It is only invoked from the nrpe::monitor_service define so I
guess it is not going to break anything.

One can later on raise the timeout of a check by doing something like:

 nrpe::monitor_service( 'check_job_queue': timeout => 30 )

Change-Id: Id031c71ac18ba1bc19f04832edad655694406095

--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -419,9 +419,11 @@ define command{
 
 
 #Generic NRPE check
+# ARG1: command to execute on remote host
+# ARG2: timeout in seconds
 define command{
 	command_name	nrpe_check
-	command_line	$USER1$/check_nrpe -H $HOSTADDRESS$ -c $ARG1$
+	command_line	$USER1$/check_nrpe -H $HOSTADDRESS$ -c $ARG1$ -t $ARG2$
 }
 
 define command{
