graphite: correct STORAGE_DIR
Change-Id: I0173d7edcedfbc8ae41600c39df35ff4b8d63c1a

--- a/modules/graphite/templates/local_settings.py.erb
+++ b/modules/graphite/templates/local_settings.py.erb
@@ -30,8 +30,7 @@ CONTENT_DIR = '/usr/share/graphite-web/static'
 GRAPHITE_ROOT = '/usr/share/graphite-web'
 INDEX_FILE = '/var/lib/graphite-web/search_index'
 LOG_DIR = '/var/log/graphite-web'
-STORAGE_DIR = '/var/lib/graphite/whisper'
-WHISPER_DIR = STORAGE_DIR
+STORAGE_DIR = '/var/lib/carbon'
 
 
 ## Database
