graphite: Correct location of Django admin static files
Change-Id: I4359674f0f4675e2b7cfdfe15999609758fcd4b3

--- a/modules/graphite/templates/graphite.nginx.erb
+++ b/modules/graphite/templates/graphite.nginx.erb
@@ -16,7 +16,7 @@ server {
         expires 30d;
     }
 
-    location /media/admin/ {
+    location /media {
         alias /usr/share/pyshared/django/contrib/admin/media;
         expires 30d;
     }
