--- a/modules/graphite/templates/local_settings.py.erb
+++ b/modules/graphite/templates/local_settings.py.erb
@@ -12,7 +12,7 @@
 ## General
 
 TIME_ZONE = 'Etc/UTC'
-SECRET_KEY = '<%= scope.lookupvar('::passwords::graphite::graphite_web_secret_key') %>'
+SECRET_KEY = '<%= @secret_key %>'
 
 
 ## Logging
