Varnish: set backend_random for POSTs
POSTs are uncacheable, so consistent hashing is not only useless but
also creates unnecessary hotspots (e.g. enwiki's api.php).

Change-Id: I6180031180a8efccb495761d71e6505c4a924c30

--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -68,7 +68,8 @@ sub vcl_recv {
 	call mobile_redirect;
 	call pass_requests;
 
-	if (req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
+	if (req.request == "POST" ||
+	    req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
 	    req.url ~ "^/w/index.php?title=Spezial:Zentrale_automatische_Anmeldung/") {
 		set req.backend = backend_random;
 		set req.hash_ignore_busy = true;
