Replace +,- chars with _ in ferm defs
Turns out the + and - characters are not allowed in ferm rules, so
substituting them with _

Change-Id: I4fa49dd8818300239aca10218f4e52e5fe620261

--- a/modules/base/templates/firewall/defs.erb
+++ b/modules/base/templates/firewall/defs.erb
@@ -21,7 +21,7 @@ special_hosts = scope.lookupvar('network::constants::special_hosts')
 
 # Realm: <%= realm %>, # Site: <%= site %>, # Sphere: <%= sphere %>, # Network: <%= network %>
 				<%-
-				descr = "#{site.upcase()}_#{sphere.upcase()}_#{network.upcase()}"
+				descr = "#{site.upcase()}_#{sphere.upcase()}_#{network.upcase()}".gsub('-', '_').gsub('+', '_')
 				familydescrs = Array.new()
 				families.each_pair do |family, address|
 					familydescr = "#{descr}_#{family.upcase()}"
