--- a/modules/base/templates/firewall/defs.erb
+++ b/modules/base/templates/firewall/defs.erb
@@ -8,22 +8,22 @@ special_hosts = scope.lookupvar('network::constants::special_hosts')
 @def $EXTERNAL_NETWORKS = (<%- external_networks.each do |external_net| -%><%= external_net %> <% end -%>);
 @def $ALL_NETWORKS = (<%- all_networks.each do |net| -%><%= net %> <% end -%>);
 
-<%- special_hosts.each_pair do |realm, services | -%>
+<%- special_hosts.sort.map do |realm, services | -%>
 	<%- if @realm != realm then next end -%>
-	<%- services.each_pair do |service, addresses| -%>
+	<%- services.sort.map do |service, addresses| -%>
 @def $<%= service.upcase() -%> = (<%- addresses.each do |address| -%><%= address %> <% end -%>);
 	<%- end -%>
 <%- end -%>
-<%- all_network_subnets.each_pair do |realm, sites| -%>
-	<%- sites.each_pair do |site, spheres| -%>
-		<%- spheres.each_pair do |sphere, networks | -%>
-			<%- networks.each_pair do |network, families| -%>
+<%- all_network_subnets.sort.map do |realm, sites| -%>
+	<%- sites.sort.map do |site, spheres| -%>
+		<%- spheres.sort.map do |sphere, networks | -%>
+			<%- networks.sort.map do |network, families| -%>
 
 # Realm: <%= realm %>, # Site: <%= site %>, # Sphere: <%= sphere %>, # Network: <%= network %>
 				<%-
 				descr = "#{site.upcase()}_#{sphere.upcase()}_#{network.upcase()}".gsub('-', '_').gsub('+', '_')
 				familydescrs = Array.new()
-				families.each_pair do |family, address|
+				families.sort.map do |family, address|
 					familydescr = "#{descr}_#{family.upcase()}"
 					familydescrs << familydescr -%>
 @def $<%= familydescr %> = (<%= address %>);
