--- a/templates/varnish/text-backend.inc.vcl.erb
+++ b/templates/varnish/text-backend.inc.vcl.erb
@@ -39,9 +39,7 @@ sub vcl_recv {
 <% end -%>
 	call pass_requests;
 
-	if (req.request == "POST" ||
-	    req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
-	    req.url ~ "^/w/index.php\?title=Spezial:Zentrale_automatische_Anmeldung/") {
+	if (req.request == "POST" || req.url ~ "^/wiki/Special:CentralAutoLogin/") {
 <% if vcl_config.fetch("cluster_tier", "1") != "1" -%>
 		set req.backend = <%= @vcl_config.fetch("default_backend", "backend") %>_random;
 <% end -%>
