--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -68,12 +68,9 @@ sub vcl_recv {
 	call mobile_redirect;
 	call pass_requests;
 
-	if (req.request == "POST" ||
-	    req.url ~ "^/wiki/Special:CentralAutoLogin/" ||
-	    req.url ~ "^/w/index.php?title=Spezial:Zentrale_automatische_Anmeldung/") {
+	if (req.request == "POST" || req.url ~ "^/wiki/Special:CentralAutoLogin/") {
 		set req.backend = backend_random;
 		set req.hash_ignore_busy = true;
-
 	}
 
 	/* Users that just logged out, should not get a 304 for their
