--- a/templates/apache/sites/icinga.wikimedia.org.erb
+++ b/templates/apache/sites/icinga.wikimedia.org.erb
@@ -34,6 +34,15 @@ Alias /icinga /usr/share/icinga/htdocs
 		Options ExecCGI
 		DirectoryIndex index.html
 		AllowOverride None
+		Order Allow,Deny
+		Allow From All
+		AuthName "WMF Labs (use wiki login name not shell)"
+		AuthType Basic
+		AuthBasicProvider ldap
+		AuthLDAPBindDN cn=proxyagent,ou=profile,dc=wikimedia,dc=org
+		AuthLDAPBindPassword <%= proxypass %>
+		AuthLDAPURL "ldaps://virt0.wikimedia.org virt1000.wikimedia.org/ou=people,dc=wikimedia,dc=org?cn"
+		Require ldap-group cn=wmf,ou=groups,dc=wikimedia,dc=org
 	</DirectoryMatch>
 	<IfModule !mod_alias.c>
 		LoadModule alias_module modules/mod_alias.so
