Parametrize listen_socket in Gdash and Graphite modules
When I wrote the modules, I figured it was best to have uWSGI serve the webapps
on a UNIX domain socket, leaving it to Nginx or Apache to proxy. But Apache
can't proxy to a UNIX domain socket, so we need to make the listener socket
customizable for the modules to be usable with Apache.

Change-Id: I5047d8840ca62178efdefc4e7b83ade3beaa3e55

--- a/modules/gdash/templates/gdash.nginx.erb
+++ b/modules/gdash/templates/gdash.nginx.erb
@@ -2,7 +2,7 @@
 # This file is managed by Puppet
 
 upstream gdash {
-    server unix:/var/run/gdash/gdash.sock;
+    server <%= @listen_socket[0] == '/' ? "unix:#{@listen_socket}" : @listen_socket %>;
 }
 
 server {
