Configure Gdash and Graphite to use mod_uwsgi
Use apache::mod::uwsgi added in I6322f4bdc.

Change-Id: I4d1a9dfe9a45648feee39279f33f8afcd24fe13e

--- a/templates/apache/sites/gdash.wikimedia.org.erb
+++ b/templates/apache/sites/gdash.wikimedia.org.erb
@@ -1,8 +1,8 @@
 # Apache configuration for gdash.wikimedia.org
 # This file is managed by Puppet.
-<VirtualHost *>
+<VirtualHost *:80>
     ServerName gdash.wikimedia.org
 
-    ProxyPass unix:/var/run/gdash/gdash.sock
-    ProxyPassReverse unix:/var/run/gdash/gdash.sock
+    uWSGIsocket /var/run/gdash/gdash.sock
+    SetHandler uwsgi-handler
 </VirtualHost>
